; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_gen_ipnet_linktype.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_gen_ipnet_linktype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block = type { i32 }

@OR_LINKTYPE = common dso_local global i32 0, align 4
@BPF_B = common dso_local global i32 0, align 4
@IPH_AF_INET = common dso_local global i32 0, align 4
@IPH_AF_INET6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.block* (i32*, i32)* @gen_ipnet_linktype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.block* @gen_ipnet_linktype(i32* %0, i32 %1) #0 {
  %3 = alloca %struct.block*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %19 [
    i32 129, label %7
    i32 128, label %13
  ]

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @OR_LINKTYPE, align 4
  %10 = load i32, i32* @BPF_B, align 4
  %11 = load i32, i32* @IPH_AF_INET, align 4
  %12 = call %struct.block* @gen_cmp(i32* %8, i32 %9, i32 0, i32 %10, i32 %11)
  store %struct.block* %12, %struct.block** %3, align 8
  br label %23

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @OR_LINKTYPE, align 4
  %16 = load i32, i32* @BPF_B, align 4
  %17 = load i32, i32* @IPH_AF_INET6, align 4
  %18 = call %struct.block* @gen_cmp(i32* %14, i32 %15, i32 0, i32 %16, i32 %17)
  store %struct.block* %18, %struct.block** %3, align 8
  br label %23

19:                                               ; preds = %2
  br label %20

20:                                               ; preds = %19
  %21 = load i32*, i32** %4, align 8
  %22 = call %struct.block* @gen_false(i32* %21)
  store %struct.block* %22, %struct.block** %3, align 8
  br label %23

23:                                               ; preds = %20, %13, %7
  %24 = load %struct.block*, %struct.block** %3, align 8
  ret %struct.block* %24
}

declare dso_local %struct.block* @gen_cmp(i32*, i32, i32, i32, i32) #1

declare dso_local %struct.block* @gen_false(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
